2013-07-11  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/edebug.el: Require cl-lib at run-time too.
	(edebug-gensym-index, edebug-gensym):
	Remove reimplementation of cl-gensym.
	(edebug-make-enter-wrapper, edebug-make-form-wrapper): Use cl-gensym.

	* thumbs.el: Require cl-lib at run-time too.
	(thumbs-gensym-counter, thumbs-gensym):
	Remove reimplementation of cl-gensym.
	(thumbs-temp-file): Use cl-gensym.

	* emacs-lisp/ert.el: Require cl-lib at runtime too.
	(ert--cl-do-remf, ert--remprop, ert--remove-if-not)
	(ert--intersection, ert--set-difference, ert--set-difference-eq)
	(ert--union, ert--gensym-counter, ert--gensym-counter)
	(ert--coerce-to-vector, ert--remove*, ert--string-position)
	(ert--mismatch, ert--subseq): Remove reimplementations of cl funcs.
	(ert-make-test-unbound, ert--expand-should-1)
	(ert--expand-should, ert--should-error-handle-error)
	(should-error, ert--explain-equal-rec)
	(ert--plist-difference-explanation, ert-select-tests)
	(ert--make-stats, ert--remove-from-list, ert--string-first-line):
	Use cl-lib functions rather than reimplementations.

2013-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Extend docstring.
	(tramp-connection-timeout): New defcustom.
	(tramp-error-with-buffer): Reset timestamp only when appropriate.
	(with-tramp-progress-reporter): Simplify.
	(tramp-process-actions): Improve messages.

	* net/tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* net/tramp-sh.el (tramp-maybe-open-connection):
	Use `tramp-connection-timeout'.
	(tramp-methods) [su, sudo, ksu]: Add method specific timeouts.
	(Bug#14808)

2013-07-11  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-file-name): Conform to the requirements of
	read-file-name.  (Bug#11861)
	(ido-read-directory-name): Conform to the requirements of
	read-directory-name.

2013-07-11  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (delay-warning): New function.

2013-07-10  Eli Zaretskii  <eliz@gnu.org>
